# codex-auto-continue

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENGINEERING_LOG.md
examples/messages/: default_continue_message.txt
legacy/: auto_continue_notify_hook.py
test/: __init__.py  smoke.sh  test_logwatch_unit.py  test_real_codex_contract.py  test_real_codex_harness_unit.py  test_real_codex_integration.py  test_rollout_e2e.sh  test_watchd_unit.py
test/support/: __init__.py  real_codex_harness.py
